// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterChips component should render - no data 1`] = `
<span
  className="ins-c-chip-filters"
/>
`;

exports[`FilterChips component should render 1`] = `
<span
  className="ins-c-chip-filters"
>
  <LabelGroup
    aria-label="Label group category"
    categoryName="Group 1"
    closeBtnAriaLabel="Close label group"
    collapsedText="\${remaining} more"
    defaultIsOpen={false}
    expandedText="Show Less"
    hasEditableTextArea={false}
    isClosable={false}
    isCompact={false}
    isEditable={false}
    isVertical={false}
    key="group_Group 1"
    numLabels={3}
    onClick={[Function]}
    tooltipPosition="top"
  >
    <Label
      key="Chip 1"
      onClose={[Function]}
      variant="outline"
    >
      Chip 1
    </Label>
    <Label
      key="Chip 2"
      onClose={[Function]}
      variant="outline"
    >
      Chip 2
      <Badge
        key="chip_badge_undefined"
      >
        3
      </Badge>
    </Label>
  </LabelGroup>
  <LabelGroup
    aria-label="Label group category"
    categoryName=""
    closeBtnAriaLabel="Close label group"
    collapsedText="\${remaining} more"
    defaultIsOpen={false}
    expandedText="Show Less"
    hasEditableTextArea={false}
    isClosable={false}
    isCompact={false}
    isEditable={false}
    isVertical={false}
    key="group_plain_chip_Chip 3"
    numLabels={3}
    onClick={[Function]}
    tooltipPosition="top"
  >
    <Label
      onClose={[Function]}
      variant="outline"
    >
      Chip 3
    </Label>
  </LabelGroup>
  <LabelGroup
    aria-label="Label group category"
    categoryName=""
    closeBtnAriaLabel="Close label group"
    collapsedText="\${remaining} more"
    defaultIsOpen={false}
    expandedText="Show Less"
    hasEditableTextArea={false}
    isClosable={false}
    isCompact={false}
    isEditable={false}
    isVertical={false}
    key="group_plain_chip_Chip 4"
    numLabels={3}
    onClick={[Function]}
    tooltipPosition="top"
  >
    <Label
      onClose={[Function]}
      variant="outline"
    >
      Chip 4
    </Label>
  </LabelGroup>
  <Button
    onClick={[Function]}
    ouiaId="ClearFilters"
    variant="link"
  >
    Clear filters
  </Button>
</span>
`;

exports[`FilterChips component should render group delete 1`] = `
<span
  className="ins-c-chip-filters"
>
  <LabelGroup
    aria-label="Label group category"
    categoryName="Group 1"
    closeBtnAriaLabel="Close label group"
    collapsedText="\${remaining} more"
    defaultIsOpen={false}
    expandedText="Show Less"
    hasEditableTextArea={false}
    isClosable={true}
    isCompact={false}
    isEditable={false}
    isVertical={false}
    key="group_Group 1"
    numLabels={3}
    onClick={[Function]}
    tooltipPosition="top"
  >
    <Label
      key="Chip 1"
      onClose={[Function]}
      variant="outline"
    >
      Chip 1
    </Label>
    <Label
      key="Chip 2"
      onClose={[Function]}
      variant="outline"
    >
      Chip 2
      <Badge
        key="chip_badge_undefined"
      >
        3
      </Badge>
    </Label>
  </LabelGroup>
  <LabelGroup
    aria-label="Label group category"
    categoryName=""
    closeBtnAriaLabel="Close label group"
    collapsedText="\${remaining} more"
    defaultIsOpen={false}
    expandedText="Show Less"
    hasEditableTextArea={false}
    isClosable={false}
    isCompact={false}
    isEditable={false}
    isVertical={false}
    key="group_plain_chip_Chip 3"
    numLabels={3}
    onClick={[Function]}
    tooltipPosition="top"
  >
    <Label
      onClose={[Function]}
      variant="outline"
    >
      Chip 3
    </Label>
  </LabelGroup>
  <LabelGroup
    aria-label="Label group category"
    categoryName=""
    closeBtnAriaLabel="Close label group"
    collapsedText="\${remaining} more"
    defaultIsOpen={false}
    expandedText="Show Less"
    hasEditableTextArea={false}
    isClosable={false}
    isCompact={false}
    isEditable={false}
    isVertical={false}
    key="group_plain_chip_Chip 4"
    numLabels={3}
    onClick={[Function]}
    tooltipPosition="top"
  >
    <Label
      onClose={[Function]}
      variant="outline"
    >
      Chip 4
    </Label>
  </LabelGroup>
  <Button
    onClick={[Function]}
    ouiaId="ClearFilters"
    variant="link"
  >
    Clear filters
  </Button>
</span>
`;

exports[`FilterChips component should render with custom delete message 1`] = `
<span
  className="ins-c-chip-filters"
>
  <LabelGroup
    aria-label="Label group category"
    categoryName="Group 1"
    closeBtnAriaLabel="Close label group"
    collapsedText="\${remaining} more"
    defaultIsOpen={false}
    expandedText="Show Less"
    hasEditableTextArea={false}
    isClosable={false}
    isCompact={false}
    isEditable={false}
    isVertical={false}
    key="group_Group 1"
    numLabels={3}
    onClick={[Function]}
    tooltipPosition="top"
  >
    <Label
      key="Chip 1"
      onClose={[Function]}
      variant="outline"
    >
      Chip 1
    </Label>
    <Label
      key="Chip 2"
      onClose={[Function]}
      variant="outline"
    >
      Chip 2
      <Badge
        key="chip_badge_undefined"
      >
        3
      </Badge>
    </Label>
  </LabelGroup>
  <LabelGroup
    aria-label="Label group category"
    categoryName=""
    closeBtnAriaLabel="Close label group"
    collapsedText="\${remaining} more"
    defaultIsOpen={false}
    expandedText="Show Less"
    hasEditableTextArea={false}
    isClosable={false}
    isCompact={false}
    isEditable={false}
    isVertical={false}
    key="group_plain_chip_Chip 3"
    numLabels={3}
    onClick={[Function]}
    tooltipPosition="top"
  >
    <Label
      onClose={[Function]}
      variant="outline"
    >
      Chip 3
    </Label>
  </LabelGroup>
  <LabelGroup
    aria-label="Label group category"
    categoryName=""
    closeBtnAriaLabel="Close label group"
    collapsedText="\${remaining} more"
    defaultIsOpen={false}
    expandedText="Show Less"
    hasEditableTextArea={false}
    isClosable={false}
    isCompact={false}
    isEditable={false}
    isVertical={false}
    key="group_plain_chip_Chip 4"
    numLabels={3}
    onClick={[Function]}
    tooltipPosition="top"
  >
    <Label
      onClose={[Function]}
      variant="outline"
    >
      Chip 4
    </Label>
  </LabelGroup>
  <Button
    onClick={[Function]}
    ouiaId="ClearFilters"
    variant="link"
  >
    <div>
      Some delete title
    </div>
  </Button>
</span>
`;
